--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
                 <div class="projects-grid">
                     <div class="project-card">
                         <div class="project-image">
-                        <img src="E:\Projects\Manually Trash Collecting Bot\IMG-20250507-WA0009.jpg"alt="E-Commerce Platform" style="width: 100%; height: 100%; object-fit: cover;">
+                        <img src="images/IMG-20250507-WA0015.jpg" alt="E-Commerce Platform" style="width: 100%; height: 100%; object-fit: cover;">
                         </div>
                         <div class="project-content">
                             <h3>Manually Controlled Trash Collecting Bot</h3>
@@ -719,7 +719,7 @@
                     </div>
                     <div class="project-card">
                         <div class="project-image">
-                        <img src="D:\WhatsApp Image 2025-06-13 at 16.13.16_05f0232a.jpg" alt="Self Balancing Robot" style="width: 100%; height: 100%; object-fit: cover;">
+                        <img src="images/WhatsApp Image 2025-06-13 at 16.13.16_05f0232a.jpg" alt="Self Balancing Robot" style="width: 100%; height: 100%; object-fit: cover;">
                         </div>
                         <div class="project-content">
                             <h3>Self Balancing Robot</h3>
