--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
                 <h2 class="section-title">About Me</h2>
                 <div class="about-content">
                     <div class="about-image">
-                    <img src="https://github.com/JOTHIRNADHREDDY/My-Portfolio/blob/main/images/IMG_20241116_233723_249.webp" alt="React" style="width: 300px; height: 300px; border-radius: 20%;">
+                    <img src="images/IMG_20241116_233723_249.webp" alt="React" style="width: 300px; height: 300px; border-radius: 20%;">
                     </div>
                     <div class="about-text">
                         <h3>Creative Problem Solver</h3>
