--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
                         <img src="https://images.seeklogo.com/logo-png/48/2/autocad-logo-png_seeklogo-482394.png" alt="CAD" style="width: 60px; height: 60px; border-radius: 50%;">
                         </div>
                         <h3>Auto Cad</h3>
-                        <p>React, Vue.js, HTML5, CSS3, JavaScript ES6+, TypeScript</p>
+                        <p></p>
                     </div>
                     <div class="skill-card">
                         <div class="skill-icon">
@@ -663,14 +663,14 @@
                         <img src="https://e7.pngegg.com/pngimages/579/803/png-clipart-the-c-programming-language-programmer-computer-programming-programming-blue-logo-thumbnail.png" alt="C++" style="width: 60px; height: 60px; border-radius: 50%;">
                         </div>
                         <h3>C++</h3>
-                        <p>MongoDB, PostgreSQL, MySQL, Redis, Firebase</p>
+                        <p></p>
                     </div>
                      <div class="skill-card">
                         <div class="skill-icon">
                         <img src="" alt="SLAM" style="width: 60px; height: 60px; border-radius: 50%;">
                         </div>
                         <h3>SLAM</h3>
-                        <p>MongoDB, PostgreSQL, MySQL, Redis, Firebase</p>
+                        <p></p>
                     </div>
                     <div class="skill-card">
                         <div class="skill-icon">
@@ -684,14 +684,14 @@
                         <img src="https://cdn.sanity.io/images/s18ewfw4/staging/1ab1332c9e2c376c1978e59da9b3dc15eb781af0-1271x358.png?rect=295,0,682,358&w=1200&h=630" alt="ROS 2" style="width: 60px; height: 60px; border-radius: 50%;">
                         </div>
                         <h3>ROS 2</h3>
-                        <p>AWS, Docker, Kubernetes, CI/CD, Git, Jenkins</p>
+                        <p></p>
                     </div>
                     <div class="skill-card">
                         <div class="skill-icon">
                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRd0tniN3Laj0khOJ2FLk2LnlShBgcJWyynZw&s" alt="360" style="width: 60px; height: 60px; border-radius: 50%;">
                         </div>
                         <h3>Fusion 360</h3>
-                        <p>React Native, Flutter, iOS, Android, Progressive Web Apps</p>
+                        <p></p>
                     </div>
                 </div>
             </div>
@@ -725,8 +725,7 @@
                             <h3>Self Balancing Robot</h3>
                             <p>Interactive dashboard for real-time data visualization and analytics, built with D3.js and React. Features customizable charts, filters, and export functionality.</p>
                             <div style="margin-top: 20px;">
-                                <span style="background: rgba(102, 126, 234, 0.2); padding: 5px 10px; border-radius: 15px; font-size: 0.8rem; margin-right: 10px;">D3.js</span>
-                                <span style="background: rgba(102, 126, 234, 0.2); padding: 5px 10px; border-radius: 15px; font-size: 0.8rem; margin-right: 10px;">React</span>
+                                <span style="background: rgba(102, 126, 234, 0.2); padding: 5px 10px; border-radius: 15px; font-size: 0.8rem; margin-right: 10px;">PID</span>
                                 <span style="background: rgba(102, 126, 234, 0.2); padding: 5px 10px; border-radius: 15px; font-size: 0.8rem;">Python</span>
                             </div>
                         </div>
