--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
                         <img src="https://e7.pngegg.com/pngimages/65/205/png-clipart-opencv-computer-vision-library-c-github-text-logo.png" alt="opencv" style="width: 60px; height: 60px; border-radius: 50%;">
                         </div>
                         <h3>openCV</h3>
-                        <p>Figma, Adobe XD, Sketch, Prototyping, User Research</p>
+                        <p></p>
                     </div>
                     <div class="skill-card">
                         <div class="skill-icon">
@@ -940,7 +940,7 @@
         // Initialize typing animation after page load
         window.addEventListener('load', () => {
             const subtitle = document.querySelector('.hero .subtitle');
-            typeWriter(subtitle, 'Mechatronics Engineer', 80);
+            typeWriter(subtitle, 'Mechatronics Engineer with Robotics', 80);
         });
 
         // Add parallax effect to background
